[gd_scene load_steps=6 format=3 uid="uid://cyoane2s711pe"]

[ext_resource type="Script" path="res://interactables/scripts/base_door.gd" id="1_qowyp"]

[sub_resource type="BoxShape3D" id="BoxShape3D_2i57n"]
size = Vector3(1.6, 2.8, 1)

[sub_resource type="Animation" id="Animation_ifa6i"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_6ro78"]
resource_name = "open_door"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 1.5708, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fb67h"]
_data = {
"RESET": SubResource("Animation_ifa6i"),
"open_door": SubResource("Animation_6ro78")
}

[node name="BaseDoor" type="Area3D" node_paths=PackedStringArray("_animation")]
script = ExtResource("1_qowyp")
_animation = NodePath("Animation")

[node name="Collision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.8, 1.4, 0.5)
shape = SubResource("BoxShape3D_2i57n")

[node name="Animation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_fb67h")
}

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
